# playground

./: .gitignore  Graph_Streaming_API.postman_collection.json  README.md  local_workflows.db  post_content_html.html  pyproject.toml  workflows.db
blueprints/: langgraph_supervisor_blueprint.md
output/: rankings.json
src/: README.md  backlinkchecker.py  data.txt  index.py  manage_sqlite.py
src/audio/: index.py
src/bleakdraft/: example.md  example_small.md  fallback.py  index.py  mix.py  rag.py  simbolyc.py
src/bleakdraft/rag/: chonkiestore.py  graph.py  load.py  main.py  vectorstore.py
src/browser-control/: index.py
src/database/: manage_sqlite.py
src/lazyposter/: index.py
src/llm_invokations/: check_tokens.py  count_tokens.py  ollama_init_chat_model.py  openai_init_chat_model.py
src/matching_words/: rapidfuzztest.py
src/now/: basicgraph.py  chonkie_embeddings.py  code_parser.py  create_summary.py  ollamaembeddings.py  stream_api.py  test_sse_client.py
src/ocr-schedules/: index.py  new_approach.py  schedule_converter.py  trigger.py
src/rag/: README.md  create_summary.py  example.md  example_small.md  graph.py  main.py  pythoncodeparser.py  state.py
src/streaming/: classify.py  detect_code.py  event_emitter.py  graph.py  indenterror.py  logginggraph.py
src/test_tools_locally/: index.py  test.py  trace.json  trace.py
src/text-processing/: markdown_to_html.py
src/transcriptai/: tunneldb.py
src/twitter-ai-extension/: POPUP_CLOSING_ISSUE.md
src/twitter-ai-extension/backend/: README.md  ai_config.py  confidence_scorer.py  prompts.py  qa_history.json  regenerate_answers.py  scored_history.json  server.py
src/twitter-ai-extension/frontend/: background.js  (+3 more)
src/utils/: delete.py
(+13 files in other folders)
