[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[all]>=1.1.1",
    "langchain-ollama>=0.3.6",
    "requests>=2.32.4",
    "scp>=0.15.0",
    "watchdog>=6.0.0",
    "langchain-community>=0.3.6",
    "langgraph>=0.6.3",
    "langchain-chroma>=0.2.5",
    "llama-index-core>=0.13.0",
    "llama-index-embeddings-ollama>=0.4.0",
    "llama-index-llms-ollama>=0.4.0",
    "llama-index>=0.13.0",
    "rapidfuzz>=3.13.0",
    "langchain-text-splitters>=0.3.9",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
